# shaders

./: Cargo.toml
src/: algorithms.rs  lib.rs  main.rs  prelude.rs
src/algorithms/: mod.rs  noise_2d.rs  perlin_noise_2d.rs
src/algorithms/noise_2d/: perlin_noise.rs  simplex_noise.rs
src/algorithms/noise_3d/: perlin_noise.rs  simplex_noise.rs
