[package]
name = "shaders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = 'z'   # Optimise for size
lto = true        # Enable Link Time Optimisation
codegen-units = 1 # Reduced to increase optimisation
panic = 'abort'   # Abort on panic
strip = "symbols" # Strip symbols from binary
